# test_uv_guide

./: README.md  pyproject.toml  script.py
scripts/: test_script.sh
