[project]
name = "test-uv-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "spikeinterface",
]

[tool.uv.sources]
spikeinterface = { git = "https://github.com/SpikeInterface/spikeinterface.git" }
